feat(admin): code executions
